--- a/src/main/webapp/WEB-INF/front/admin/index1.html
+++ b/src/main/webapp/WEB-INF/front/admin/index1.html
@@ -3,10 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Panelo - Free Admin Template</title>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Belgrano' rel='stylesheet' type='text/css'>
 <!-- jQuery file -->
 <script src="js/jquery.min.js"></script>
+<!-- <script src="http://code.jquery.com/jquery-1.4.1.min.js"></script> -->
+
 <script src="js/jquery.tabify.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
 var $ = jQuery.noConflict();
