--- a/src/main/webapp/WEB-INF/front/html/index.html
+++ b/src/main/webapp/WEB-INF/front/html/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-<h2>Hello World! <br>index in front</h2>
+<h2>Hello World! <br>index in html file</h2>
+<a href="admin/index.html">后台管理</a>
 </body>
 </html>
