--- a/src/main/webapp/WEB-INF/front/admin/index.html
+++ b/src/main/webapp/WEB-INF/front/admin/index.html
@@ -22,8 +22,8 @@
     <div class="title"><a href="#">Panelo Admin</a></div>
     
     <div class="header_right">Welcome Admin, 
-      <a href="#" class="settings">设置</a> 
-      <a href="../api/admin/login.out" class="logout">退出登录</a> 
+      <a href="#" class="settings"><img src="images/settings.png"/>设置</a> 
+      <a href="../api/admin/login.out" class="logout"><img src="images/logout.png"/>退出登录</a> 
     </div>
     
     <div class="menu">
