--- a/src/main/webapp/WEB-INF/front/admin/login.html
+++ b/src/main/webapp/WEB-INF/front/admin/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ºóÌ¨µÇÂ¼ </title>
+<title>åå°ç™»å½• </title>
 <link rel="stylesheet" type="text/css" href="css/login.css">
 <!-- jQuery file -->
 <script src="js/jquery.min.js"></script>
@@ -25,8 +25,9 @@
     </fieldset>
     
     <fieldset id="actions">
-        <input type="submit" id="submit" value="Log in">
-        <a href="">Forgot your password?</a><a href="">Register</a>
+        <input type="button" id="submit" value="Log in">
+        <a href="#">Forgot your password?</a><a href="#">Register</a>
+        <span id="btntest"><a href="#">test</a></span>
     </fieldset>
 </form>
 <br><br>
