--- a/src/main/webapp/WEB-INF/front/admin/index.html
+++ b/src/main/webapp/WEB-INF/front/admin/index.html
@@ -286,7 +286,7 @@
                         </li>
                         <!-- /.side-menu item -->
                         <li>
-                            <a href="../pages/index.html"><i class="fa fa-dashboard fa-fw"></i> 主面板</a>
+                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> 主面板</a>
                         </li>
                       <!-- /.side-menu item -->
                         <li>
