--- a/src/main/webapp/WEB-INF/front/admin/user_panel.html
+++ b/src/main/webapp/WEB-INF/front/admin/user_panel.html
@@ -111,6 +111,16 @@
             </div>
             <!-- /.row -->
   		 </div>
+          <div id="edit_panel" class="center_panel">
+          	 <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="page-header" align="center">用户编辑</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+          </div>
+       </div>
+
        </div>
         <!-- /#page-wrapper -->
 
