--- a/src/main/webapp/WEB-INF/front/admin/role_panel.html
+++ b/src/main/webapp/WEB-INF/front/admin/role_panel.html
@@ -59,7 +59,7 @@
          <div id="list_panel" class="center_panel">
             <div class="row">
                 <div class="col-lg-12">
-                    <h3 class="page-header" align="center">用户列表</h1>
+                    <h3 class="page-header" align="center">用户角色列表</h1>
             </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -70,7 +70,7 @@
                 <div class="panel-body" id="btns_table">
                    <button type="button" id="delete_select" class="btn btn-primary">删除选中</button>
                    &nbsp;&nbsp;&nbsp;
-                   <button type="button" id="user_add" class="btn btn-primary">添加用户</button>
+                   <button type="button" id="group_add" class="btn btn-primary">添加Role</button>
                 </div>            
                 <div class="col-lg-12">
                     <div class="panel panel-default">
@@ -89,14 +89,10 @@
                                     <tr>
                                     	<th><a href="#" class="btn btn-default btn-xs">全选</a></th>
                                     	<th>ID</th>
-                                        <th>用户名</th>
-                                        <th>密码</th>
-                                        <th>昵称</th>
-                                        <th>邮箱</th>
-                                        <th>电话</th>
-                                        <th>状态</th>
-                                        <th>创建时间</th>
-                                        <th>操作</th>
+                                        <th>名称</th>
+                                        <th>类型</th>
+                                        <th>编辑</th>
+                                        <th>删除</th>
                                     </tr>
                                 </thead>
                                 <tbody></tbody>
@@ -292,7 +288,7 @@
     
     <!-- user defined js file -->
     <script src="js/common.js"></script>
-    <script src="js/user_panel.js"></script>
+    <script src="js/role_panel.js"></script>
 
 
 </body>
