--- a/src/main/webapp/WEB-INF/front/admin/user_panel.html
+++ b/src/main/webapp/WEB-INF/front/admin/user_panel.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>CMS Admin</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -82,7 +82,7 @@
                  <!-- /.panel-heading -->
                  <div class="panel-body">
                  
-                     <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-user">
+                     <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-list">
                  		<thead>
                              <tr>
                              	<th><a href="#" id="select_all" class="btn btn-default btn-xs">全选</a></th>
