--- a/src/main/webapp/WEB-INF/front/admin/user_panel_add.html
+++ b/src/main/webapp/WEB-INF/front/admin/user_panel_add.html
@@ -9,8 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
-
+	<title>CMS Admin</title>
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -207,7 +206,7 @@
        
      <!-- user defined js file -->
     <script src="js/common.js"></script>   
-	<script src="js/user_add.js"></script>
+	<script src="js/user_panel_add.js"></script>
     
     <script type="text/javascript">
 
