--- a/src/main/webapp/WEB-INF/front/admin/user_panel_edit.html
+++ b/src/main/webapp/WEB-INF/front/admin/user_panel_edit.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>CMS Admin</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -229,7 +229,7 @@
        
      <!-- user defined js file -->
     <script src="js/common.js"></script>   
-	<!-- <script src="js/user_panel.js"></script> -->
+	<script src="js/user_panel_edit.js"></script>
     
     <script type="text/javascript">
 
