--- a/src/main/webapp/WEB-INF/front/admin/navigation.html
+++ b/src/main/webapp/WEB-INF/front/admin/navigation.html
@@ -264,10 +264,10 @@
                      <a href="#"><i class="fa fa-columns fa-fw"></i> 栏目管理<span class="fa arrow"></span></a>
                      <ul class="nav nav-second-level">
                          <li>
-                             <a href="../pages/user_panel.html">栏目列表</a>
+                             <a href="channel_panel.html">栏目列表</a>
                          </li>
                          <li>
-                             <a href="../pages/group_panel.html">添加栏目</a>
+                             <a href="channel_panel_add.html">添加栏目</a>
                          </li>                          
                      </ul>
                     
@@ -314,7 +314,7 @@
 </nav>
  
     <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="../vendor/jquery/jquery.min.js"></script> -->
     
     <!-- Bootstrap Core JavaScript -->
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
