--- a/src/main/webapp/WEB-INF/front/admin/role_panel_edit.html
+++ b/src/main/webapp/WEB-INF/front/admin/role_panel_edit.html
@@ -175,7 +175,7 @@
        
      <!-- user defined js file -->
     <script src="js/common.js"></script>   
-    <script src="js/group_panel_edit.js"></script>
+    <script src="js/role_panel_edit.js"></script>
 
     
 
