--- a/src/main/webapp/WEB-INF/front/admin/navigation.html
+++ b/src/main/webapp/WEB-INF/front/admin/navigation.html
@@ -213,7 +213,7 @@
                  <li><a href="#"><i class="fa fa-gear fa-fw"></i> 设置</a>
                  </li>
                  <li class="divider"></li>
-                 <li><a href="../pages/login.html"><i class="fa fa-sign-out fa-fw"></i> 退出登录</a>
+                 <li><a href="../api/admin/login.out"><i class="fa fa-sign-out fa-fw"></i> 退出登录</a>
                  </li>
              </ul>
              <!-- /.dropdown-user -->
@@ -317,7 +317,7 @@
     <!-- <script src="../vendor/jquery/jquery.min.js"></script> -->
     
     <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- <script src="../vendor/bootstrap/js/bootstrap.min.js"></script> -->
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../vendor/metisMenu/metisMenu.min.js"></script>
