--- a/src/main/webapp/WEB-INF/front/html/login.html
+++ b/src/main/webapp/WEB-INF/front/html/login.html
@@ -4,7 +4,7 @@
 <title>后台登录 </title>
 <link rel="stylesheet" type="text/css" href="css/login.css">
 <!-- jQuery file -->
-<script src="js/jquery.min.js"></script>
+ <script src="vendor/jquery/jquery.min.js"></script>
 <script src="js/login.js"></script>
 <script type="text/javascript">
 
