--- a/src/main/webapp/WEB-INF/front/user/home.html
+++ b/src/main/webapp/WEB-INF/front/user/home.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h2>Hello World! <br>index in html file</h2>
+<h2>User Home Page <br>index in html file</h2>
 <a href="login.html">后台管理</a>
 </body>
 </html>
