--- a/src/main/webapp/WEB-INF/front/html/login.html
+++ b/src/main/webapp/WEB-INF/front/html/login.html
@@ -94,12 +94,16 @@ DD_belatedPNG.fix('img,.ie6png');
 							<div class="t-25 pl-30 fc333">没有社会化账号，使用邮箱账号登录</div>
 							<div class="clearfix pt-25">
 								<div class="title pull-left fc999" style="width: 60px;">用户名</div>
-								<div class="pull-left l-20" style="_margin-left: 0;width: 100px;"><input type="text" id="username" name="Login[username]" value="" class="span4"/></div>
+								<div class="pull-left l-20" style="_margin-left: 0;width: 100px;">
+								<input type="text" id="username" name="Login[username]" value="" class="span4 text"/>
+								</div>
 								<span class="pull-left l-20 fcCF261F info username_msg"></span>
 							</div>
 							<div class="clearfix pt-25">
 								<div class="title pull-left fc999" style="width: 60px;">密&nbsp;&nbsp;&nbsp;码</div>
-								<div class="pull-left l-20" style="_margin-left: 0;width: 100px;"><input type="password" id="password" name="Login[password]" value="" class="span4"/></div>
+								<div class="pull-left l-20" style="_margin-left: 0;width: 100px;">
+								<input type="password" id="password" name="Login[password]" value="" class="span4 password"/>
+								</div>
 								<span class="pull-left l-20 fcCF261F info password_msg"></span>
 							</div>
 							<div class="clearfix pt-25" style="padding-top: 1px">
