--- a/src/main/webapp/WEB-INF/front/html/navigation.html
+++ b/src/main/webapp/WEB-INF/front/html/navigation.html
@@ -29,4 +29,4 @@
     </div><!--/.container -->
 </div><!--/.navbar-inner -->
 <!-- basic.css中样式与bootstrap有重复，防止被bootstrap.css覆盖 -->
-<link rel="stylesheet" type="text/css" href="template/style/basic.css"/>
+<!-- <link rel="stylesheet" type="text/css" href="template/style/basic.css"/> -->
