--- a/src/main/webapp/WEB-INF/front/html/login.html
+++ b/src/main/webapp/WEB-INF/front/html/login.html
@@ -11,7 +11,7 @@
 
 <!-- Le styles -->
 <link rel="stylesheet" type="text/css" href="template/style/basic.css"/>
-<link rel="stylesheet" type="text/css" href="template/style/index.css"/>
+<link rel="stylesheet" type="text/css" href="template/style/login.css"/>
 <link rel="stylesheet" type="text/css" href="template/style/comment.css"/>
 
 <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
