--- a/src/main/webapp/WEB-INF/front/html/navigation.html
+++ b/src/main/webapp/WEB-INF/front/html/navigation.html
@@ -10,20 +10,38 @@
                 <li class="active"><a href="index.html"><b>首页</b></a></li>
                
 			</ul>
-		<ul class="nav pull-right login-none nav-tips">
+		<ul class="nav navbar-right pull-right login-none nav-tips">
 		 <li class="ie6png divider-vertical" style="_width: 30px;_height: 40px;_background: url(template/images/icons.png) no-repeat 10px -106px;">
 		  <a class="dropdown-toggle clearfix" href="javascript:;" style="padding: 7px 5px;">
 		    <img class="logo-before pull-left" src="template/images/avatar-icon.png" />
 		  </a>
+	      <ul class="dropdown-menu">
+                <li><a href="#"><i class="fa fa-user fa-fw"></i> 用户中心</a>
+                </li>
+                <li><a href="#"><i class="fa fa-gear fa-fw"></i> 设置</a>
+                </li>
+                <li class="divider"></li>
+                <li><a href="../api/admin/login.out"><i class="fa fa-sign-out fa-fw"></i> 退出登录</a>
+                </li>
+            </ul>
 		 </li>
 		</ul>
 		<div class="popup-div tips-div" style="position: absolute;z-index: 10000001;display: none;">
 		</div>
 
 
-		<ul class="nav pull-right pl-20 myul">
+		<ul class="nav pull-right pl-20 myul navbar-right">
 		    <li class=""><a href="register.html">注册</a></li>
 		    <li class="l10"><a href="login.html">登录</a></li>
+			<li class="dropdown">
+			   
+				<a href="#"><b>菜单</b></a>
+				<ul class="dropdown-menu">
+					<li><a href="#">jmeter</a></li>
+					<li><a href="#">EJB</a></li>
+			
+				</ul>
+			</li>
 		</ul>
 		
     </div><!--/.container -->
