--- a/src/main/webapp/WEB-INF/front/html/login.html
+++ b/src/main/webapp/WEB-INF/front/html/login.html
@@ -10,6 +10,7 @@
 
 
 <!-- Le styles -->
+<!--basic.css 放在 bootstrap.min.css前面-->
 <link rel="stylesheet" type="text/css" href="template/style/basic.css"/>
 <link rel="stylesheet" type="text/css" href="template/style/login.css"/>
 <link rel="stylesheet" type="text/css" href="template/style/comment.css"/>
