--- a/src/main/webapp/WEB-INF/front/html/article_list.html
+++ b/src/main/webapp/WEB-INF/front/html/article_list.html
@@ -9,47 +9,39 @@
 <meta name="Description" content="关键字"/>
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 
-<!-- JQuery -->
-<script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
+<script>
+var contextPath = null;
+function getContextPath(){
+	if(contextPath == null){
+		var localObj = window.location;
+		var contextPath = localObj.pathname.split("/")[1];
+		var basePath = localObj.protocol+"//"+localObj.host+"/"+contextPath;
+		contextPath = basePath;
+	}
+	return contextPath;
+	
+}
 
-<!-- !!!!!!!!!!添加bootstrap样式,十分重要 --><!--放在basic.css前面，否则会覆盖basic.css  -->
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
-<script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
+/* JQuery */
+document.write('<script type="text/javascript" src="'+getContextPath()+'/vendor/jquery/jquery.min.js"></'+'script>');
 
-<!-- Le styles -->
-<link rel="stylesheet" type="text/css" href="template/style/basic.css"/>
-<link rel="stylesheet" type="text/css" href="template/style/cxzx_list.css"/>
-<link rel="stylesheet" type="text/css" href="template/style/comment.css"/>
+//bootstrap
+document.write('<link href="'+getContextPath()+'/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">');
+document.write('<script src="'+getContextPath()+'/vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></'+'script>');
 
-
-
-<script type="text/javascript" src="template/js/bioV4.min.js"></script>
-<script type="text/javascript" src="template/js/jquery.lazyload.mini.js"></script>
-<script type="text/javascript" src="template/js/function.js"></script>
-
-
-
-<!-- <script type="text/javascript" src="js/list.js"></script> -->
-
-<!--[if IE 6]>
-<script type="text/javascript" src="template/js/DD_belatedPNG.js"></script>
-<script type="text/javascript">
-DD_belatedPNG.fix('img,.ie6png');
-</script>
-<![endif]--> 
-
-<link type="text/css" rel="stylesheet" href="template/style/biobox2.css" />
-<script type="text/javascript" src="template/js/biobox.js"></script>
-
+//模板css js文件
+<!--basic.css 要放在 bootstrap.min.css后面-->
+document.write('<link href="'+getContextPath()+'/template/style/basic.css" rel="stylesheet">');
+document.write('<link href="'+getContextPath()+'/template/style/cxzx_list.css" rel="stylesheet">');
+<!-- 模板js文件 --> 
+document.write('<script type="text/javascript" src="'+getContextPath()+'/template/js/function.js"></'+'script>');
 <!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	
-<script type="text/javascript" src="template/js/borsertocss.js"> </script>	
+document.write('<script src="'+getContextPath()+'/template/js/borsertocss.js" type="text/javascript"></'+'script>');
 
 
 <!-- 自定义js --> 
-<script type="text/javascript" src="js/common.js"></script>
-
-
-
+document.write('<script src="'+getContextPath()+'/js/common.js" type="text/javascript"></'+'script>');
+</script>
 </head>
 <body>
     
