--- a/src/main/webapp/WEB-INF/front/html/index.html
+++ b/src/main/webapp/WEB-INF/front/html/index.html
@@ -8,40 +8,39 @@
 <meta name="Keywords" content="CNV CMS,关键字"/>
 <meta name="Description" content="CNV CMS,网站简介。"/>
 
-<!-- !!!!!!!!!!添加bootstrap样式,十分重要 -->
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
+<script>
+var contextPath = null;
+function getContextPath(){
+	if(contextPath == null){
+		var localObj = window.location;
+		var contextPath = localObj.pathname.split("/")[1];
+		var basePath = localObj.protocol+"//"+localObj.host+"/"+contextPath;
+		contextPath = basePath;
+	}
+	return contextPath;
+	
+}
 
-<!-- Le styles -->
-<link rel="stylesheet" type="text/css" href="template/style/basic.css"/>
-<link rel="stylesheet" type="text/css" href="template/style/index.css"/>
-<link rel="stylesheet" type="text/css" href="template/style/comment.css"/>
+/* JQuery */
+document.write('<script type="text/javascript" src="'+getContextPath()+'/vendor/jquery/jquery.min.js"></'+'script>');
 
-<script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
+//bootstrap
+document.write('<link href="'+getContextPath()+'/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">');
+document.write('<script src="'+getContextPath()+'/vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></'+'script>');
 
-<script type="text/javascript" src="template/js/bioV4.min.js"></script>
-<script type="text/javascript" src="template/js/jquery.lazyload.mini.js"></script>
-<script type="text/javascript" src="template/js/function.js"></script>
-
-<!--[if IE 6]>
-<script type="text/javascript" src="template/js/DD_belatedPNG.js"></script>
-<script type="text/javascript">
-DD_belatedPNG.fix('img,.ie6png');
-</script>
-<![endif]--> 
-
-<link type="text/css" rel="stylesheet" href="template/style/biobox2.css" />
-<script type="text/javascript" src="template/js/biobox.js"></script>
- 
- 
-
-
+//模板css js文件
+<!--basic.css 要放在 bootstrap.min.css后面-->
+document.write('<link href="'+getContextPath()+'/template/style/basic.css" rel="stylesheet">');
+document.write('<link href="'+getContextPath()+'/template/style/index.css" rel="stylesheet">');
+<!-- 模板js文件 --> 
+document.write('<script type="text/javascript" src="'+getContextPath()+'/template/js/function.js"></'+'script>');
 <!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	
-<script type="text/javascript" src="template/js/borsertocss.js"> </script>	
+document.write('<script src="'+getContextPath()+'/template/js/borsertocss.js" type="text/javascript"></'+'script>');
+
 
 <!-- 自定义js --> 
-<script type="text/javascript" src="js/common.js"></script>
-
+document.write('<script src="'+getContextPath()+'/js/common.js" type="text/javascript"></'+'script>');
+</script>
 </head>
 <body>
 
@@ -98,7 +97,7 @@ DD_belatedPNG.fix('img,.ie6png');
 
     
 	<div class="hr tp-div-nexthr" style="margin-top: 0;margin-bottom: 0;padding: 0;"></div>
-	<div class="container pb-15" style="padding: 0;">>
+	<div class="container pb-15" style="padding: 0;">
 	<!-- Example row of columns -->
 	<div class="row home-index">
 		<div class="span13">
