--- a/src/main/webapp/WEB-INF/front/html/navigation.html
+++ b/src/main/webapp/WEB-INF/front/html/navigation.html
@@ -10,8 +10,10 @@
                 <li class="active"><a href="index.html"><b>首页</b></a></li>
                
 			</ul>
-		<ul class="nav navbar-right pull-right login-none nav-tips">
-		 <li class="ie6png divider-vertical" style="_width: 30px;_height: 40px;_background: url(template/images/icons.png) no-repeat 10px -106px;">
+			
+		<ul id="top-usercenter" class="nav navbar-right pull-right login-none nav-tips">
+
+	<!-- 	  <li class="ie6png divider-vertical" style="_width: 30px;_height: 40px;_background: url(template/images/icons.png) no-repeat 10px -106px;">
 		  <a class="dropdown-toggle clearfix" href="javascript:;" style="padding: 7px 5px;">
 		    <img class="logo-before pull-left" src="template/images/avatar-icon.png" />
 		  </a>
@@ -24,7 +26,8 @@
                 <li><a href="../api/admin/login.out"><i class="fa fa-sign-out fa-fw"></i> 退出登录</a>
                 </li>
             </ul>
-		 </li>
+		 </li>	 -->	
+
 		</ul>
 		<div class="popup-div tips-div" style="position: absolute;z-index: 10000001;display: none;">
 		</div>
