--- a/src/main/webapp/WEB-INF/front/html/register.html
+++ b/src/main/webapp/WEB-INF/front/html/register.html
@@ -8,16 +8,22 @@
 <meta name="Keywords" content="CNV CMS,关键字"/>
 <meta name="Description" content="CNV CMS,网站简介。"/>
 
+<!-- JQuery -->
+<script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
 
-<!-- Le styles -->
+<!-- bootstrap css添加在basic.css前面-->
+<link  rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css"> 
+<script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- 模板样式文件 -->
 <link rel="stylesheet" type="text/css" href="template/style/basic.css"/>
 <link rel="stylesheet" type="text/css" href="template/style/login.css"/>
 
  <!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	
  <script type="text/javascript" src="template/js/borsertocss.js"> </script>
-
-<script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="template/js/function.js"></script>
+ 
+<!-- 自定义js --> 
+<script type="text/javascript" src="js/common.js"></script>
 
 <!--[if IE 6]>
 <script type="text/javascript" src="template/js/DD_belatedPNG.js"></script>
@@ -26,15 +32,6 @@ DD_belatedPNG.fix('img,.ie6png');
 </script>
 <![endif]--> 
 
- 
-<!-- !!!!!!!!!!添加bootstrap样式,十分重要 -->
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
-<script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
- 
-
- 
- <!-- 自定义js --> 
-<script type="text/javascript" src="js/common.js"></script>
 </head>
 
 <body>
