--- a/src/main/webapp/WEB-INF/front/html/login.html
+++ b/src/main/webapp/WEB-INF/front/html/login.html
@@ -8,38 +8,31 @@
 <meta name="Keywords" content="CNV CMS,关键字"/>
 <meta name="Description" content="CNV CMS,网站简介。"/>
 
+<!-- JQuery -->
+<script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
 
-<!-- Le styles -->
-<!--basic.css 放在 bootstrap.min.css前面-->
+<!-- bootstrap css添加在basic.css前面-->
+<link  rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css"> 
+<script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- 模板样式文件 -->
 <link rel="stylesheet" type="text/css" href="template/style/basic.css"/>
 <link rel="stylesheet" type="text/css" href="template/style/login.css"/>
-<link rel="stylesheet" type="text/css" href="template/style/comment.css"/>
 
-<script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="template/js/bioV4.min.js"></script>
-<script type="text/javascript" src="template/js/jquery.lazyload.mini.js"></script>
-<script type="text/javascript" src="template/js/function.js"></script>
+ <!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	
+ <script type="text/javascript" src="template/js/borsertocss.js"> </script>
+ 
+<!-- 自定义js --> 
+<script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/login.js"></script>
 
 <!--[if IE 6]>
-<script type="text/javascript" src="js/DD_belatedPNG.js"></script>
+<script type="text/javascript" src="template/js/DD_belatedPNG.js"></script>
 <script type="text/javascript">
 DD_belatedPNG.fix('img,.ie6png');
 </script>
 <![endif]--> 
 
-<link type="text/css" rel="stylesheet" href="template/style/biobox2.css" />
-<script type="text/javascript" src="template/js/biobox.js"></script>
- <!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	
- <script type="text/javascript" src="template/js/borsertocss.js"> </script>
- 
-<!-- !!!!!!!!!!添加bootstrap样式,十分重要 -->
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
-<script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-
-<!-- 自定义js --> 
-<script type="text/javascript" src="js/common.js"></script>
-<script type="text/javascript" src="js/login.js"></script>
  
 </head>
 <body>
