--- a/src/main/webapp/WEB-INF/front/user/article_add.html
+++ b/src/main/webapp/WEB-INF/front/user/article_add.html
@@ -20,23 +20,24 @@ function getContextPath(){
 	return contextPath;
 	
 }
-//模板css js文件
-<!--basic.css 要放在 bootstrap.min.css前面-->
-document.write('<link href="'+getContextPath()+'/template/style/basic.css" rel="stylesheet">');
-document.write('<link href="'+getContextPath()+'/template/style/login.css" rel="stylesheet">');
 
-<!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	
-document.write('<script src="'+getContextPath()+'/template/js/borsertocss.js" type="text/javascript"></'+'script>');
 /* JQuery */
 document.write('<script type="text/javascript" src="'+getContextPath()+'/vendor/jquery/jquery.min.js"></'+'script>');
 
-//bootstrap
+/* bootstrap */
 document.write('<link href="'+getContextPath()+'/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">');
 document.write('<script src="'+getContextPath()+'/vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></'+'script>');
 
-<!-- 模板js文件 --> 
+/* 模板css js文件 */
+<!--basic.css 要放在 bootstrap.min.css后面-->
+document.write('<link href="'+getContextPath()+'/template/style/basic.css" rel="stylesheet">');
+document.write('<link href="'+getContextPath()+'/template/style/login.css" rel="stylesheet">');
+/* <!-- 模板js文件 -->  */
 document.write('<script type="text/javascript" src="'+getContextPath()+'/template/js/function.js"></'+'script>');
-<!-- 自定义js --> 
+/* <!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	 */
+document.write('<script src="'+getContextPath()+'/template/js/borsertocss.js" type="text/javascript"></'+'script>');
+
+/* <!-- 自定义js -->  */
 document.write('<script src="'+getContextPath()+'/js/common.js" type="text/javascript"></'+'script>');
 </script>
 
