--- a/src/main/webapp/WEB-INF/front/user/home.html
+++ b/src/main/webapp/WEB-INF/front/user/home.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <h2>User Home Page <br>index in html file</h2>
-<a href="login.html">后台管理</a>
+<p><a href="../index.html">首页</a>
+<p><a href="article_add.html">发布文章</a>
 </body>
 </html>
