--- a/src/main/webapp/WEB-INF/front/html/index.html
+++ b/src/main/webapp/WEB-INF/front/html/index.html
@@ -36,13 +36,11 @@
 
  <!--头部代码开始-->
 
- <div class="navbar navbar-fixed-top" style="_position: relative;_z-index: 10000;">
+<div id="navigation-div" class="navbar navbar-fixed-top" style="_position: relative;_z-index: 10000;">
+
 		<!-- Navigation -->
-  <div id="navigation-div">
 
-  </div>  
-
- </div><!--/.navbar navbar-fixed-top -->
+</div><!--/.navbar navbar-fixed-top -->
 	
 	<div class="top-div">
 	<div class="container clearfix">
