--- a/src/main/webapp/WEB-INF/front/html/navigation.html
+++ b/src/main/webapp/WEB-INF/front/html/navigation.html
@@ -23,7 +23,7 @@
 		<ul class="nav pull-right pl-20 myul navbar-right">
 		    <li class=""><a href="register.html">注册</a></li>
 		    <li class="l10"><a href="login.html">登录</a></li>
-			<li class="dropdown">
+<!-- 			<li class="dropdown">
 			   
 				<a href="#"><b>菜单</b></a>
 				<ul class="dropdown-menu  right-menu">
@@ -31,7 +31,7 @@
 					<li><a href="#">EJB</a></li>
 			
 				</ul>
-			</li>
+			</li> -->
 		</ul>
 		
     </div><!--/.container -->
