--- a/src/main/webapp/WEB-INF/front/user/home.html
+++ b/src/main/webapp/WEB-INF/front/user/home.html
@@ -3,5 +3,6 @@
 <h2>User Home Page <br>index in html file</h2>
 <p><a href="../index.html">首页</a>
 <p><a href="article_add.html">发布文章</a>
+<p><a href="../admin/index.html">后台管理</a>
 </body>
 </html>
