--- a/src/main/webapp/WEB-INF/front/html/error404.html
+++ b/src/main/webapp/WEB-INF/front/html/error404.html
@@ -8,37 +8,42 @@
 <meta name="Keywords" content="CNV CMS,关键字"/>
 <meta name="Description" content="CNV CMS,网站简介。"/>
 
+<script>
+var contextPath = null;
+function getContextPath(){
+	if(contextPath == null){
+		var localObj = window.location;
+		var contextPath = localObj.pathname.split("/")[1];
+		var basePath = localObj.protocol+"//"+localObj.host+"/"+contextPath;
+		contextPath = basePath;
+	}
+	return contextPath;
+	
+}
 
-<!-- Le styles -->
-<link rel="stylesheet" type="text/css" href="template/style/basic.css"/>
-<link rel="stylesheet" type="text/css" href="template/style/login.css"/>
-<link rel="stylesheet" type="text/css" href="template/style/comment.css"/>
+/* JQuery */
+document.write('<script type="text/javascript" src="'+getContextPath()+'/vendor/jquery/jquery.min.js"></'+'script>');
 
-<script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="template/js/bioV4.min.js"></script>
-<script type="text/javascript" src="template/js/jquery.lazyload.mini.js"></script>
-<script type="text/javascript" src="template/js/function.js"></script>
+/* bootstrap */
+document.write('<link href="'+getContextPath()+'/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">');
+document.write('<script src="'+getContextPath()+'/vendor/bootstrap/js/bootstrap.min.js" type="text/javascript"></'+'script>');
 
-<!--[if IE 6]>
-<script type="text/javascript" src="js/DD_belatedPNG.js"></script>
-<script type="text/javascript">
-DD_belatedPNG.fix('img,.ie6png');
+/* 模板css js文件 */
+<!--basic.css 要放在 bootstrap.min.css后面-->
+document.write('<link href="'+getContextPath()+'/template/style/basic.css" rel="stylesheet">');
+document.write('<link href="'+getContextPath()+'/template/style/login.css" rel="stylesheet">');
+/* <!-- 模板js文件 -->  */
+document.write('<script type="text/javascript" src="'+getContextPath()+'/template/js/function.js"></'+'script>');
+/* <!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	 */
+document.write('<script src="'+getContextPath()+'/template/js/borsertocss.js" type="text/javascript"></'+'script>');
+
+/* <!-- 自定义js -->  */
+document.write('<script src="'+getContextPath()+'/js/common.js" type="text/javascript"></'+'script>');
 </script>
-<![endif]--> 
-
-<link type="text/css" rel="stylesheet" href="template/style/biobox2.css" />
-<script type="text/javascript" src="template/js/biobox.js"></script>
- <!-- 判断在IE9以下浏览器中根据像素的不同而设置的样式 -->	
- <script type="text/javascript" src="template/js/borsertocss.js"> </script>
- 
-<!-- !!!!!!!!!!添加bootstrap样式,十分重要 -->
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> 
-<script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
 
-<!-- 自定义js --> 
-<script type="text/javascript" src="js/common.js"></script>
-<script type="text/javascript" src="js/login.js"></script>
+
+
  
 </head>
 <body>
@@ -68,10 +73,13 @@ DD_belatedPNG.fix('img,.ie6png');
 				<div class="label-main">
 					<div class="clearfix label-public">
 						<div class="pull-left third-party l-30 pt-25">
-							<img  src="template/images/pic404.png"/>
+							<script>
+							document.write('<img  src="'+getContextPath()+'/template/images/pic404.png"/>');
+							</script>
+							
 						</div>
 						<div class="pull-left">
-						
+							<p></p>
 							<h1>您访问的页面不存在</h1>
 							<p>您可以：</p>
 							<p>1.检查访问的页面网址是否正确</p>
