--- a/src/main/webapp/WEB-INF/front/html/login.html
+++ b/src/main/webapp/WEB-INF/front/html/login.html
@@ -12,7 +12,8 @@
 	<link rel="stylesheet" href="css/basic.css">
 	<link rel="stylesheet" href="css/login.css">
 	<!-- 自定义js -->
-	<script src="js/common.js"></script>	
+	<script src="js/common.js"></script>
+	<script src="js/login.js"></script>		
 </head>
 <body>
 <div id="navigation-div"> 
@@ -61,7 +62,7 @@
 																																																																								
 				<div class="col-sm-10" align="right">
 
-					<button id="form_submit" type="submit" class="btn btn-primary">&nbsp;&nbsp;登录&nbsp;&nbsp;</button>
+					<button id="login_submit" type="submit" class="btn btn-primary">&nbsp;&nbsp;登录&nbsp;&nbsp;</button>
 					<span>&nbsp;&nbsp;&nbsp;</span>
 					<label class="checkbox-inline">
 						<input type="checkbox" id="login_checkbox">下次自动登录
