--- a/src/main/webapp/WEB-INF/front/admin/user_panel_add.html
+++ b/src/main/webapp/WEB-INF/front/admin/user_panel_add.html
@@ -139,7 +139,7 @@
                                             <label class="col-sm-2 control-label">头&nbsp;&nbsp;&nbsp;像：</label>
                                             <div class="col-sm-10">
                                             <form id= "uploadForm">  
-                                            	<button id="pic_btn" class="btn btn-primary">上传</button>
+                                            	<button id="pic_btn" class="btn btn-primary">上传(测试)</button>
                                             	<input type="file" id="user_pic">
                                             	<p class="help-block">选一张你喜欢的照片吧</p>
                                             </form>
