--- a/src/main/webapp/WEB-INF/front/html/article_add.html
+++ b/src/main/webapp/WEB-INF/front/html/article_add.html
@@ -89,8 +89,8 @@
                                    <tr>
                                   <th style='text-align:right'>附件：</th>
                                       <td>
-                                      	<input type="file" id="user_pic" style="display:inline;">
-                                      	<button id="pic_btn" class="btn btn-primary">上传(测试)</button>
+                                      	<!-- <input type="file" id="user_pic" style="display:inline;">
+                                      	<button id="pic_btn" class="btn btn-primary">上传(测试)</button> -->
                                       </td>
                                   </tr>                                  
                                   <tr>
@@ -99,7 +99,7 @@
                                   </tr>
                                   <tr>
                                    <td colspan="2">
-                                   <textarea id="article-text"  class="xheditor" rows="16" cols="80" style="width: 100%"></textarea>
+                                   <textarea id="article-text"   rows="16" cols="80" style="width: 100%"></textarea>
                                    </td>
                                   	
                                   </tr>
