--- a/src/main/webapp/WEB-INF/front/html/navigation.html
+++ b/src/main/webapp/WEB-INF/front/html/navigation.html
@@ -31,23 +31,26 @@
 			</li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#">注册</a></li>
-			<li><a href="login.html">登录</a></li>
-			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+			
+				<li id="register-link"></li>
+				<li id="login-link"></li>
+		
+			
+			<li class="dropdown" id="top-usercenter">
+<!-- 				<a class="dropdown-toggle" data-toggle="dropdown" href="#">
 					<i class="glyphicon glyphicon-user"></i>
 					<i class="glyphicon glyphicon-menu-down"></i>
 				</a>
-				<ul class="dropdown-menu dropdown-user" id="top-usercenter">
-					<li><a href="#"><i class="glyphicon glyphicon-user"></i>用户中心</a>
+				<ul class="dropdown-menu dropdown-user">
+					 <li><a href="#"><i class="glyphicon glyphicon-user"></i>用户中心</a>
 					</li>
 					<li><a href="#"><i class="glyphicon glyphicon-cog"></i> 设置</a>
 					</li>
 					<li class="divider"></li>
 					<li><a href="#"><i class="glyphicon glyphicon-log-out"></i>退出</a>
-					</li>
-				</ul>
-				<!-- /.dropdown-user -->
+					</li> 
+				</ul> -->
+				
 			</li>
 	
 		</ul>		
