--- a/src/main/webapp/WEB-INF/front/html/article.html
+++ b/src/main/webapp/WEB-INF/front/html/article.html
@@ -11,73 +11,15 @@
 	<!-- 自定义css -->
 	<link rel="stylesheet" href="css/basic.css">
 	<link rel="stylesheet" href="css/article.css">
+	
+	<!-- 自定义js -->
+	<script src="js/common.js"></script>
 </head>
 <body>
 
-<nav class="navbar  navbar-inverse navbar-fixed-top">
- <div class="navbar-inner">
-	<div class="container"> 
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse"
-				data-target="#example-navbar-collapse">
-			<span class="sr-only">切换导航</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<a class="navbar-brand" href="#">CNV-CMS</a>
-	</div>
-	<div class="collapse navbar-collapse" id="example-navbar-collapse">
-		<ul class="nav navbar-nav">
-			<li class="active"><a href="#">体育</a></li>
-			<li><a href="#">娱乐</a></li>
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					Java <b class="caret"></b>
-				</a>
-				<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-					<li><a href="#">jmeter</a></li>
-					<li><a href="#">EJB</a></li>
-					<li><a href="#">Jasper Report</a></li>
-					<li class="divider"></li>
-					<li><a href="#">分离的链接</a></li>
-					<li class="divider"></li>
-					<li><a href="#">另一个分离的链接</a></li>
-				</ul>
-			</li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-			<li><a href="#">注册</a></li>
-			<li><a href="#">登录</a></li>
-			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-					<i class="glyphicon glyphicon-user"></i>
-					<i class="glyphicon glyphicon-menu-down"></i>
-				</a>
-				<ul class="dropdown-menu dropdown-user">
-					<li><a href="#"><i class="glyphicon glyphicon-user"></i>用户中心</a>
-					</li>
-					<li><a href="#"><i class="glyphicon glyphicon-cog"></i> 设置</a>
-					</li>
-					<li class="divider"></li>
-					<li><a href="#"><i class="glyphicon glyphicon-log-out"></i>退出</a>
-					</li>
-				</ul>
-				<!-- /.dropdown-user -->
-			</li>
-	
-		</ul>		
-	</div>
-	</div>
- </div>
-</nav>
-<!-- Page Header -->
-<header class="jumbotron">
-  <div class="container">
-    <h1>CNV</h1>
-    <p class="lead">欢迎来到 CMS Header</p>
-  </div>
-</header>
+<div id="navigation-div"> 
+
+</div>
 
 <!-- Page Content -->
 <div class="container">
@@ -112,7 +54,7 @@
 			<p>归集过程按照“统一归集、及时准确、共享共用”的原则，全面、及时、准确地将各有关部门产生的企业信息统一归集于企业名下。全市各涉企管理部门要按照“谁产生、谁提供、谁负责”的原则，及时归集和公示履行职责过程中产生的各类许可、处罚等信息。</p>
 			<p>为充分使用归集完成的涉企信用信息数据，青岛市企业信用信息服务平台已正式投入使用。依托市公共信用信息平台和工商业务数据库，为各部门提供综合信息、许可信息、监管信息、风险信息、部门认定五大类实时信用信息，全景反映企业经营状态。企业信用信息分类功能按照企业信用指标所反映的信用状况，对企业进行A、B、C、D等级的自动分类标注，分别对应正常、警示、失信和严重失信企业。信用协同监管功能便于各部门及时全面掌握企业信用信息，在市场准入、市场监管等工作中对失信企业协同监管和联合惩戒。(记者 王瑜)</p> 
 			<!-- <p class="detailPic"><img src="http://y2.ifengimg.com/dd10d045c79defcc/2015/1103/rdn_563813ec13406.jpg" width="620" height="21" alt=""></p>   -->
-			<p class="detailPic"><img src="http://y2.ifengimg.com/dd10d045c79defcc/2015/1103/rdn_563814a4e506f.jpg" width="258" height="258" alt=""></p>
+			<!-- <p class="detailPic"><img src="http://y2.ifengimg.com/dd10d045c79defcc/2015/1103/rdn_563814a4e506f.jpg" width="258" height="258" alt=""></p> -->
 		  <!--mainContent end-->		
 		</div>
 		<div class="article-commend">
