--- a/src/main/webapp/WEB-INF/front/html/article.html
+++ b/src/main/webapp/WEB-INF/front/html/article.html
@@ -46,7 +46,7 @@
 			</div>
 		
 		</div>	
-		<div class="article-content">
+		<div class="article-content" id="article_content">
 		   <!--mainContent begin-->
 			<p>原标题：青岛4个等级划分企业信用 推行涉企信息归集共享机制</p>
 			<p>青岛日报/青岛观/青报网讯 记者22日从青岛市政府相关会议上获悉，青岛将全面推行政府部门涉企信息统一归集，推进企业信用体系建设，强化企业信用监管。目前已确定首批归集48个部门数据目录5620项、企业名下信息489万条。</p> 
