前台页面小的更新

--- a/src/main/webapp/WEB-INF/front/html/article.html
+++ b/src/main/webapp/WEB-INF/front/html/article.html
@@ -14,6 +14,7 @@
 	
 	<!-- 自定义js -->
 	<script src="js/common.js"></script>
+	<script src="js/article.js"></script>
 </head>
 <body>
 
@@ -31,30 +32,24 @@
 	  <!-- 页面左侧内容区 -->
 	  <div class="page-div col-md-7 col-md-offset-1">
 		<div class="article-header">
-			<h3  id="artical_topic">青岛4等级划分企业信用 推涉企信息归集共享机制</h3>
+			<h3  id="artical_topic">正在加载...</h3>
 			<div class="article-info">
 				<p>
-                <span class="ss01">2017年01月22日 22:36</span><br>   
+                <span class="ss01" id="article_date">2017年01月22日 22:36</span><br>   
                 <span class="ss02">来源：</span>
 					<span id="publisher">
 						<span it="name" class="ss03">
-							<a href="void(0)"  target="_blank">凤凰网</a>
+							<a href="void(0)"  target="_blank">CNV-CMS</a>
 						</span>
 					</span>                
-					<span it="author" class="ss04">作者：<span itemprop="name">Admin</span></span>
+					<span it="author" class="ss04">作者：<span id="article_author" itemprop="name">Admin</span></span>
             </p>			
 			</div>
 		
 		</div>	
 		<div class="article-content" id="article_content">
 		   <!--mainContent begin-->
-			<p>原标题：青岛4个等级划分企业信用 推行涉企信息归集共享机制</p>
-			<p>青岛日报/青岛观/青报网讯 记者22日从青岛市政府相关会议上获悉，青岛将全面推行政府部门涉企信息统一归集，推进企业信用体系建设，强化企业信用监管。目前已确定首批归集48个部门数据目录5620项、企业名下信息489万条。</p> 
-			<p>长期以来，大量企业行政许可、行政处罚信息散落在各个部门之中，信息不完整、不精确、不关联，无法共享共用，“一处失信、处处受限”的信用约束机制普遍缺乏数据基础。为破解这一难题，我市出台了《关于做好涉企信息统一归集公示工作的通知》，着力建立政府部门企业信息归集共享机制，加强大数据在市场监管中的应用。</p> 
-			<p>归集过程按照“统一归集、及时准确、共享共用”的原则，全面、及时、准确地将各有关部门产生的企业信息统一归集于企业名下。全市各涉企管理部门要按照“谁产生、谁提供、谁负责”的原则，及时归集和公示履行职责过程中产生的各类许可、处罚等信息。</p>
-			<p>为充分使用归集完成的涉企信用信息数据，青岛市企业信用信息服务平台已正式投入使用。依托市公共信用信息平台和工商业务数据库，为各部门提供综合信息、许可信息、监管信息、风险信息、部门认定五大类实时信用信息，全景反映企业经营状态。企业信用信息分类功能按照企业信用指标所反映的信用状况，对企业进行A、B、C、D等级的自动分类标注，分别对应正常、警示、失信和严重失信企业。信用协同监管功能便于各部门及时全面掌握企业信用信息，在市场准入、市场监管等工作中对失信企业协同监管和联合惩戒。(记者 王瑜)</p> 
-			<!-- <p class="detailPic"><img src="http://y2.ifengimg.com/dd10d045c79defcc/2015/1103/rdn_563813ec13406.jpg" width="620" height="21" alt=""></p>   -->
-			<!-- <p class="detailPic"><img src="http://y2.ifengimg.com/dd10d045c79defcc/2015/1103/rdn_563814a4e506f.jpg" width="258" height="258" alt=""></p> -->
+		   	<p>正在加载...
 		  <!--mainContent end-->		
 		</div>
 		<div class="article-commend">
