--- a/src/main/webapp/WEB-INF/front/user/article_add.html
+++ b/src/main/webapp/WEB-INF/front/user/article_add.html
@@ -30,7 +30,7 @@
 	
 	<!-- 自定义js -->
 	<script src="../js/common.js"></script>
-	<script src="../js/user_home.js"></script>
+	<script src="../js/user_home_common.js"></script>
 	<script src="../js/article_add.js"></script>
 
 
