--- a/src/main/webapp/WEB-INF/front/user/sidebar.html
+++ b/src/main/webapp/WEB-INF/front/user/sidebar.html
@@ -11,9 +11,9 @@
 			
 			<a href="#" title="点击更换头像"><img class="head" src="../images/user-head1.jpg"></a>
 			<!-- <a href="#"><img class="btn" src="../images/new_article.jpg"></a> -->
-			<div class="user-action">	
+			<div class="user-action" id="side-action-btn">	
 				<a href="article_add.html" class="btn btn-default">发表文章</a>
-				<a href="../admin/index.html" class="btn btn-default">管理员入口</a>
+				
 			</div>
 		</div>
 
