--- a/src/main/webapp/WEB-INF/front/user/user_profile.html
+++ b/src/main/webapp/WEB-INF/front/user/user_profile.html
@@ -30,8 +30,8 @@
 	
 	<!-- 自定义js -->
 	<script src="../js/common.js"></script>
-	<script src="../js/user_home.js"></script>
-	<script src="../js/article_add.js"></script>
+	<script src="../js/user_home_common.js"></script>
+	<script src="../js/user_profile.js"></script>
 
 
 
