--- a/src/main/webapp/WEB-INF/front/admin/navigation.html
+++ b/src/main/webapp/WEB-INF/front/admin/navigation.html
@@ -213,7 +213,7 @@
                  <li><a href="#"><i class="fa fa-gear fa-fw"></i> 设置</a>
                  </li>
                  <li class="divider"></li>
-                 <li><a href="../api/admin/login.out"><i class="fa fa-sign-out fa-fw"></i> 退出登录</a>
+                 <li><a href="javascript:void(0)" onclick="loginOut()"><i class="fa fa-sign-out fa-fw"></i> 退出登录</a>
                  </li>
              </ul>
              <!-- /.dropdown-user -->
