修正了java配置时事务不起作用

--- a/src/main/webapp/WEB-INF/front/html/navigation.html
+++ b/src/main/webapp/WEB-INF/front/html/navigation.html
@@ -62,6 +62,6 @@
 <header class="jumbotron">
   <div class="container">
     <h1>CNV</h1>
-    <p class="lead">欢迎来到 CMS Header</p>
+    <p class="lead">欢迎来到 CMS</p>
   </div>
 </header>
